theme-columns: fix changing width of left on Firefox

--- a/website/plugins/theme-columns/src/css/columns.css
+++ b/website/plugins/theme-columns/src/css/columns.css
@@ -54,6 +54,9 @@ body, div, nav, main {
         width: calc(50% - 430px);
         min-width: 200px;
     }
+    div.page {
+        width: calc(50% + 430px);
+    }
     div.main-container {
         flex: 0 0 850px;
     }
